--- a/src/Quiz/Quiz.css
+++ b/src/Quiz/Quiz.css
@@ -1,10 +1,18 @@
 .title { /* ข้อความด้านบน */
+    position: absolute;
+    right: 550px;
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
+    justify-content: center;
 }
 
-.button {
+.photo {
+    position: absolute;
+    left:  80px;
+}
+
+.button { 
     display: flex;
     margin-bottom: auto;
     padding: 30px;
@@ -72,7 +80,7 @@
 
 .chevron-icon {
     position: absolute;
-    left: 0px;
+    left: 60px;
     top: 20px;
     width: 48%;
     height: 48%;
